# D_bud1

./: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
docs/: PHASE_3_DESKTOP_OVERLAY.md  PHASE_4_1_INTERACTIONS.md  PHASE_4_2_FIXES.md  PHASE_4_EVENT_ANIMATION.md  PHASE_5_INTERACTION_MENU.md  PHASE_6_1_VOICE_PROFILES.md  PHASE_6_VOICE_CONVERSATION.md  PHASE_7_MEMORY.md  PROJECT_PHASE_ROADMAP.md  VOICE_PACK_GUIDE.md
scripts/: install-voice-pack.ps1  validate-expressions.mjs  validate-motion3.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  memory.rs
src/animation/config/: animationProfiles.ts
src/animation/runtime/: CharacterAnimationScheduler.ts  DesktopBuddyAnimationEngine.ts  RootMotionPlayer.ts
src/animation/types/: AnimationProfiles.ts  AnimationTypes.ts
src/app/events/: TypedEventBus.ts
src/app/window/: DesktopWindowService.ts
src/characters/: createCharacterSystem.ts
src/characters/live2d/: Live2DCharacterRuntime.ts  Live2DPropLayer.ts  cubism6RenderOrderBridge.ts  live2dAssetSchemas.ts
src/characters/manifests/: yachiyo.ts
src/characters/registry/: CharacterRegistry.ts
src/components/: ExpressionTestHarness(before_face_change).tsx.backup  ExpressionTestHarness.tsx  ExpressionTestHarness.tsx.backup  ExpressionTestHarness1.tsx.backup  ExpressionTestHarness2.tsx.backup
src/config/: LocalVoiceResponses.ts
voice-engine/: requirements.txt  run.ps1  setup.ps1  xtts_server.py
(+35 files in other folders)
