[package]
name = "desktop-buddyos"
version = "0.1.0"
description = "Desktop Buddy overlay"
authors = ["Pratham Goyal"]
edition = "2021"

[lib]
name = "desktop_buddyos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

base64 = "0.22"
rusqlite = { version = "0.40.1", features = ["bundled"] }
